añadi nuevas funciones a la tabla

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 @import 'flowbite';
+
+
+th {
+    background: rgb(11 23 57);
+    width: 30px!important;
+    color: white;
+}
