--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../css/output.css" />
     <title>Iniciar Sección</title>
   </head>
-  <body class="bg-[#060d23] bg-[url('../assets/img/')]">
+  <body class="bg-[#060d23] ">
  
     <form
-      class="w-[90%] max-w-[400px] absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] rounded-[20px] bg-[#0b1739] "
-    >
+      class="w-[90%] max-w-[400px] absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] rounded-[20px] bg-[#0b1739] " action="../Backend/login.php" id="loginForm"
+    method="POST">
       <fieldset class="flex flex-col p-[25px]">
 
         <div class="flex flex-col items-center">
@@ -21,7 +21,7 @@
         <div class="relative z-0 w-full mb-5 group">
             <input
               type="text"
-              name="floating_username"
+              name="Usuario"
               id="floating_username"
               class="block py-2.5 px-0 w-full text-sm text-[#eaf6ff] bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
               placeholder=" "
@@ -37,7 +37,7 @@
           <div class="relative z-0 w-full mb-5 group">
             <input
               type="password"
-              name="floating_password"
+              name="Contraseña"
               id="floating_password"
               class="block py-2.5 px-0 w-full text-sm text-[#eaf6ff] bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
               placeholder=" "
@@ -61,5 +61,16 @@
 
       </fieldset>
     </form>
+
+<!-- Modal -->
+<div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center">
+  <div class="bg-white rounded-lg p-5 w-80">
+    <h2 id="modalTitle" class="font-bold text-lg"></h2>
+    <p id="modalMessage" class="mt-2"></p>
+    <button id="modalClose" class="mt-4 bg-blue-500 text-white rounded-lg px-4 py-2">Cerrar</button>
+  </div>
+</div>
+
+    <script src="../assets/js/login.js"></script>
   </body>
 </html>
