--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,7 +62,7 @@
     <ul class="space-y-2 font-medium">
       <li>
         <a
-          href="#"
+          href="index.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
           <svg
@@ -108,7 +108,7 @@
         </a>
         <ul id="dropdown-example" class="hidden py-2 space-y-2">
           <li>
-            <a href="#" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+            <a href="Asistencias.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Asistencias</a>
          </li>
           <li>
@@ -116,7 +116,7 @@
              hover:text-white dark:text-white dark:hover:bg-gray-700">Lista de Empleados</a>
           </li>
           <li>
-            <a href="#" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
+            <a href="permisos-vacaciones.html" class="flex items-center w-full p-2 text-[rgb(0,170,255)] transition duration-75 rounded-lg pl-11 group hover:bg-[rgb(37,92,255)] 
             hover:text-white dark:text-white dark:hover:bg-gray-700">Permisos Y Vacaciones</a>
          </li>
           
@@ -127,7 +127,7 @@
    
       <li>
         <a
-          href="#"
+          href="estadisticas.html"
           class="flex items-center p-2 text-[rgb(0,170,255)] rounded-lg dark:text-white hover:bg-[rgb(37,92,255)] hover:text-white dark:hover:bg-gray-700 group"
         >
           <svg
