--- a/src/templates/registro.html
+++ b/src/templates/registro.html
@@ -112,7 +112,7 @@
           >
         </div>
         <div class="relative z-0 w-full mb-5 group">
-            <select name="tipo_usuario" id="tipos" class="bg-[rgb(6,13,35)] text-white border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <select name="tipo_usuario" id="tipos" required class="bg-[rgb(6,13,35)] text-white border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
               <option selected>Seleccione tipo de usuario</option>
               <option value="Administrador">Administrador</option>
               <option value="Empleado">Empleado</option>
